--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <!-- Product 1 -->
             <div class="product">
                 <a href="product1.html">
-                    <img src="Pictures/Dress.jpg" alt="Long Sleeve Baby Boy Girl Bodysuit" class="img-rounded" width="100%" height="270px">
+                    <img src="Pictures/Dress.jpg" alt="Long Sleeve Baby Boy Girl Bodysuit" class="img-rounded">
                 </a>
                 <h3>Long Sleeve Baby Boy Girl Bodysuit</h3>
                 <!-- Rating Stars -->
@@ -146,7 +146,7 @@
                 <!-- Product 2 -->
             <div class="product">
                 <a href="product2.html">
-                    <img src="Pictures/Boy Dress.jpg" class="img-rounded" alt="Boy Dress" width="100%" height="270px">
+                    <img src="Pictures/Boy Dress.jpg" class="img-rounded" alt="Boy Dress">
                 </a>
                 <h3>Children's Summer Vest Shorts Suit</h3>
                 <!-- Rating Stars -->
@@ -172,7 +172,7 @@
                 <!-- Product 3 -->
             <div class="product">
                 <a href="product3.html">
-                    <img src="Pictures/Socks.jpg" alt="Socks" class="img-rounded" width="100%" height="270px">
+                    <img src="Pictures/Socks.jpg" alt="Socks" class="img-rounded">
                 </a>
                 <h3>Girls Solid Knee-High Socks Stockings</h3>
                 <!-- Rating Stars -->
@@ -198,7 +198,7 @@
                 <!-- Product 4 -->
                 <div class="product">
                     <a href="product4.html">
-                        <img src="Pictures/Girl trouser.jpg" alt="Girl Trouser" class="img-rounded" width="100%" height="270px">
+                        <img src="Pictures/Girl trouser.jpg" alt="Girl Trouser" class="img-rounded">
                     </a>
                     <h3>Floral Size Small to Medium (7-8) Leggings</h3>
                     <!-- Rating Stars -->
